[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scene/Floating/IchuenHead.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/Floating/FloatingMix.gd" type="Script" id=2]
[ext_resource path="res://Image/musical_consert.png" type="Texture" id=4]
[ext_resource path="res://Image/bg2.jpg" type="Texture" id=5]
[ext_resource path="res://Image/home.png" type="Texture" id=6]
[ext_resource path="res://Font/Sanamdeklen_chaya_45.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scene/Floating/MnoHead.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scene/Floating/SpengHead.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scene/Floating/OlayHead.tscn" type="PackedScene" id=10]
[ext_resource path="res://Font/SanamDeklen_chaya.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
use_filter = true
font_data = ExtResource( 11 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Bg" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="musical_consert" type="Sprite" parent="Bg"]
modulate = Color( 0, 0, 0, 0.45098 )
position = Vector2( 512.007, 936.945 )
texture = ExtResource( 4 )

[node name="Tek_abc3dz_mno" parent="." instance=ExtResource( 8 )]
position = Vector2( 58.0135, 198.041 )

[node name="Tek_abc3dz_olay" parent="." instance=ExtResource( 10 )]
position = Vector2( 58.0083, 307.237 )

[node name="Tek_abc3dz_ichuen" parent="." instance=ExtResource( 1 )]
position = Vector2( 171.001, 237.711 )

[node name="Tek_abc3dz_speng" parent="." instance=ExtResource( 9 )]
position = Vector2( 167.019, 353.792 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]

[node name="ClickMno" type="Label" parent="HBoxContainer"]
margin_right = 43.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0.878431, 0.537255, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = " 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickOlay" type="Label" parent="HBoxContainer"]
margin_left = 47.0
margin_right = 90.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0.419608, 0.498039, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = " 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickSpeng" type="Label" parent="HBoxContainer"]
margin_left = 94.0
margin_right = 137.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0.92549, 0.972549, 0.113725, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = " 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickIchuen" type="Label" parent="HBoxContainer"]
margin_left = 141.0
margin_right = 184.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0.772549, 0, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = " 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickT" type="Label" parent="HBoxContainer"]
margin_left = 188.0
margin_right = 360.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0.921875, 0.129639, 0.129639, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = " Total : 0"
align = 1

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 364.0
margin_top = 12.0
margin_right = 772.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = " right sprites there are only one"

[node name="HomeBT" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 500.0
margin_top = 1793.63
margin_right = 628.0
margin_bottom = 1921.63
texture_normal = ExtResource( 6 )

[connection signal="pressed" from="HomeBT" to="." method="_on_HomeBT_pressed"]
[connection signal="pressed" from="HomeBT" to="." method="_on_Level_pressed"]
